CHANGES IN VERSION 0.99.24
------------------------
 o update vignett <2015-03-11, Wed>
 
CHANGES IN VERSION 0.99.23
------------------------
 o mv geom_hilight to hilight <2015-03-11, Wed>
 o mv geom_phylopic to phylopic <2015-03-11, Wed>
 o implement collapse_clade and expand_clade for collapse and expand a selected clade <2015-03-11, Wed> 
 
CHANGES IN VERSION 0.99.22
------------------------
 o remove quote in beast tip/node labels <2015-03-10, Tue>
 
CHANGES IN VERSION 0.99.21
------------------------
 o fixed downloading png file in Windows platform, should explicitly setting mode="wb". <2015-03-03, Tue>
 
CHANGES IN VERSION 0.99.19
------------------------
 o for time scale tree inferred by BEAST, now user can use time_scale=TRUE parameter in ggtree function <2015-02-12, Thu>
 
CHANGES IN VERSION 0.99.18
------------------------
 o bug fixed in reorder the labels in gplot.heatmap <2015-02-12, Thu>
 
CHANGES IN VERSION 0.99.17
------------------------
 o add angle and branch.y variable in cladogram layout <2015-02-10, Tue>
 
CHANGES IN VERSION 0.99.16
------------------------
 o correct typo in vignette <2015-02-10, Tue>

CHANGES IN VERSION 0.99.15
------------------------
 o fully support of replace operator, %<% <2015-02-09, Mon>
 
CHANGES IN VERSION 0.99.14
------------------------
 o add example in groupOTU for adding legend manually <2015-02-09, Mon>.

CHANGES IN VERSION 0.99.13
------------------------
 o two dimensional tree <2015-02-06, Fri>
 
CHANGES IN VERSION 0.99.12
------------------------
 o update vignette <2015-02-04, Wed>
 o gzoom methods that supports all tree objects <2015-02-04, Wed>
 o geom_hilight layer for highlighting clade <2015-02-04, Wed> 
 
CHANGES IN VERSION 0.99.11
------------------------
 o add scale_color to support colored lines and text based on numerical values and update vignette <2015-02-04, Wed>
 o revised groupOTU that output index can be used in geom_text and update vignette <2015-02-04, Wed>
