@@ -1,5 +1,6 @@
 CHANGES IN VERSION 0.99.24
 ------------------------
+ o use "round" segment end, look very better <2015-03-12, Thu>
  o update vignett <2015-03-11, Wed>
  
 CHANGES IN VERSION 0.99.23
